Added linux profile to pom

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
                 <joml.version>1.10.5</joml.version>
                 <lwjgl.natives>natives-windows</lwjgl.natives>
             </properties>
-
         </profile>
 
         <profile>
@@ -41,7 +40,23 @@
                 <joml.version>1.10.5</joml.version>
                 <lwjgl.natives>natives-macos</lwjgl.natives>
             </properties>
+        </profile>
 
+        <profile>
+            <id>platform-linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <properties>
+                <maven.compiler.source>17</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <lwjgl.version>3.3.1</lwjgl.version>
+                <joml.version>1.10.5</joml.version>
+                <lwjgl.natives>natives-linux</lwjgl.natives>
+            </properties>
         </profile>
     </profiles>
 
