--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,13 @@ cache:
   paths:
     - .m2/repository
 
+# Build
+.build:
+  stage: build
+  script:
+    - mvn compile
+
+
 # For merge requests do not `deploy` but only run `verify`.
 # See https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html
 .verify:
@@ -68,13 +75,13 @@ verify:jdk17:
 # For deploying packages to GitLab's Maven Repository: See https://docs.gitlab.com/ee/user/packages/maven_repository/index.html#create-maven-packages-with-gitlab-cicd for more details.
 # Please note: The GitLab Maven Repository is currently only available in GitLab Premium / Ultimate.
 # For `master` or `main` branch run `mvn deploy` automatically.
-deploy:jdk17:
-  stage: deploy
-  script:
-    - if [ ! -f ci_settings.xml ]; then
-        echo "CI settings missing\! If deploying to GitLab Maven Repository, please see https://docs.gitlab.com/ee/user/packages/maven_repository/index.html#create-maven-packages-with-gitlab-cicd for instructions.";
-      fi
-    - 'mvn $MAVEN_CLI_OPTS deploy --settings ci_settings.xml'
-  only:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+# deploy:jdk17:
+#   stage: deploy
+#   script:
+#     - if [ ! -f ci_settings.xml ]; then
+#         echo "CI settings missing\! If deploying to GitLab Maven Repository, please see https://docs.gitlab.com/ee/user/packages/maven_repository/index.html#create-maven-packages-with-gitlab-cicd for instructions.";
+#       fi
+#     - 'mvn $MAVEN_CLI_OPTS deploy --settings ci_settings.xml'
+#   only:
+#     variables:
+#       - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
