Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ cache:
     - .m2/repository
 
 # Build
-.build:
+build-job:
   stage: build
   script:
     - mvn compile
@@ -58,7 +58,7 @@ cache:
 
 # For merge requests do not `deploy` but only run `verify`.
 # See https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html
-.verify:
+verify-job:
   stage: test
   script:
     - 'mvn $MAVEN_CLI_OPTS verify'
