--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,21 +55,25 @@ build-job:
   script:
     - mvn compile
 
+test-job:
+  stage: test
+  script:
+    - mvn test
 
 # For merge requests do not `deploy` but only run `verify`.
 # See https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html
-verify-job:
-  stage: test
-  script:
-    - 'mvn $MAVEN_CLI_OPTS verify'
-  except:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+# verify-job:
+#   stage: test
+#   script:
+#     - 'mvn $MAVEN_CLI_OPTS verify'
+#   except:
+#     variables:
+#       - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 # Verify merge requests using JDK8
-verify:jdk17:
-  extends:
-    - verify-job
+# verify:jdk17:
+#   extends:
+#     - verify-job
 
 # To deploy packages from CI, create a `ci_settings.xml` file
 # For deploying packages to GitLab's Maven Repository: See https://docs.gitlab.com/ee/user/packages/maven_repository/index.html#create-maven-packages-with-gitlab-cicd for more details.
