Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,5 +55,8 @@ test-job:
 deploy-job:
   stage: deploy
   script:
-    - mvn javadoc:javadoc
     - mvn install
+  artifacts:
+    paths:
+      - target/*.jar
+
