Modified gm so Citizen shall only pursue higher education if education is primary. Modified zone statistic panel, so pension shows the expected pension to be paid, tax shows the actual tax to be paid at the year.

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,20 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.5.0</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>engine.engineMain.MainApp</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
