Fixed null workplace? Differentiated industry pollution and free work place effects. Added missing documents

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,16 @@
     </dependencies>
 
     <build>
+        <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <includes>
+                <include>**/*.obj</include>
+                <include>**/*.png</include>
+            </includes>
+        </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -177,6 +187,30 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>engine.engineMain.MainApp</mainClass>
+                        </manifest>
+                    </archive>
+
+                </configuration>
+            </plugin>
+
 
         </plugins>
     </build>
