--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.5.0</version>
+                <configuration>
+                    <useStandardDocletOptions>false</useStandardDocletOptions>
+                </configuration>
             </plugin>
 
             <plugin>
