Replaced all file loader dependency. All resources except texture can be loaded from jar directly.

--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,9 @@
             <directory>src/main/resources</directory>
             <includes>
                 <include>**/*.obj</include>
+                <include>**/*.glsl</include>
                 <include>**/*.png</include>
+                <include>**/*.fnt</include>
             </includes>
         </resource>
         </resources>
